--- a/ide/debugoptionsfrm.lfm
+++ b/ide/debugoptionsfrm.lfm
@@ -7,14 +7,15 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
   OnDestroy = DebuggerOptionsFormDESTROY
   PixelsPerInch = 90
   Position = poScreenCenter
-  HorzScrollBar.Page = 481
-  VertScrollBar.Page = 443
+  HorzScrollBar.Page = 479
+  VertScrollBar.Page = 441
   Left = 411
   Height = 442
   Top = 185
   Width = 480
   object nbDebugOptions: TNotebook
     Align = alTop
+    BorderSpacing.OnChange = nil
     PageIndex = 0
     Height = 398
     Width = 480
@@ -27,6 +28,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       Top = 28
       Width = 476
       object gbDebuggerType: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Debugger type and path'
         ClientHeight = 69
         ClientWidth = 468
@@ -38,6 +40,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Top = 8
         Width = 472
         object cmbDebuggerType: TComboBox
+          BorderSpacing.OnChange = nil
           MaxLength = 0
           OnChange = cmbDebuggerTypeCHANGE
           ParentCtl3D = False
@@ -48,6 +51,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 268
         end
         object cmbDebuggerPath: TComboBox
+          BorderSpacing.OnChange = nil
           MaxLength = 0
           ParentCtl3D = False
           TabOrder = 1
@@ -57,6 +61,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 428
         end
         object cmdOpenDebuggerPath: TButton
+          BorderSpacing.OnChange = nil
           Caption = '...'
           OnClick = cmdOpenDebuggerPathCLICK
           TabOrder = 2
@@ -67,6 +72,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
       end
       object gbAdditionalSearchPath: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Additional search path'
         ClientHeight = 35
         ClientWidth = 468
@@ -78,6 +84,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Top = 100
         Width = 472
         object txtAdditionalPath: TEdit
+          BorderSpacing.OnChange = nil
           TabOrder = 0
           Left = 6
           Height = 25
@@ -85,6 +92,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 428
         end
         object cmdOpenAdditionalPath: TButton
+          BorderSpacing.OnChange = nil
           Caption = '...'
           OnClick = cmdOpenAdditionalPathClick
           TabOrder = 1
@@ -95,28 +103,45 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
       end
       object gbDebuggerSpecific: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Debugger specific options (depends on type of debugger)'
-        ClientHeight = 187
+        ClientHeight = 234
         ClientWidth = 468
         ParentColor = True
         ParentCtl3D = False
         TabOrder = 2
         Left = 2
-        Height = 204
-        Top = 156
+        Height = 251
+        Top = 212
         Width = 472
         object pnlDebugSpecific: TPanel
           Align = alClient
+          BorderSpacing.OnChange = nil
           BevelOuter = bvNone
           BorderWidth = 4
-          ClientHeight = 187
+          ClientHeight = 234
           ClientWidth = 468
           FullRepaint = False
           TabOrder = 0
           TabStop = True
-          Height = 187
+          Height = 234
           Width = 468
         end
+      end
+      object gcbDebuggerGeneralOptions: TCheckGroup
+        BorderSpacing.OnChange = nil
+        Caption = 'Debugger general options'
+        Items.Strings = (
+          'Show message on stop'
+        )
+        ParentColor = True
+        Left = 2
+        Height = 48
+        Top = 156
+        Width = 472
+        Data = {
+          0100000002
+        }
       end
     end
     object pgEventLog: TPage
@@ -128,6 +153,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       Top = 28
       Width = 476
       object gbGeneral: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'General'
         ClientHeight = 132
         ClientWidth = 230
@@ -140,7 +166,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Width = 230
         object chkClearLogOnRun: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Clear log on run'
           TabOrder = 0
           Left = 4
@@ -150,7 +176,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkLimitLinecount: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Limit linecount to'
           TabOrder = 1
           Left = 4
@@ -159,15 +185,12 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 119
         end
         object seLimitLinecount: TSpinEdit
+          BorderSpacing.OnChange = nil
           Climb_Rate = 7.10933840589535E-34
           Enabled = False
           MaxValue = 7.10933840589535E-34
           MinValue = 7.10933840589535E-34
           TabOrder = 2
-          Value = 7.10933840589535E-34
-          Climb_Rate = 7.10933840589535E-34
-          MinValue = 7.10933840589535E-34
-          MaxValue = 7.10933840589535E-34
           Value = 7.10933840589535E-34
           Left = 28
           Height = 20
@@ -176,6 +199,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
       end
       object gbMessages: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Messages'
         ClientHeight = 188
         ClientWidth = 232
@@ -189,7 +213,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Width = 232
         object chkMessagesBreakpoint: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Breakpoint'
           TabOrder = 0
           Left = 4
@@ -199,7 +223,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesProcess: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Process'
           TabOrder = 1
           Left = 4
@@ -209,7 +233,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesThread: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Thread'
           TabOrder = 2
           Left = 4
@@ -219,7 +243,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesModule: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Module'
           TabOrder = 3
           Left = 4
@@ -229,7 +253,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesOutput: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Output'
           TabOrder = 4
           Left = 4
@@ -239,7 +263,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesWindow: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Window'
           TabOrder = 5
           Left = 4
@@ -249,7 +273,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         end
         object chkMessagesInterface: TCheckBox
           AllowGrayed = True
-          AutoSize = True
+          BorderSpacing.OnChange = nil
           Caption = 'Interface'
           TabOrder = 6
           Left = 4
@@ -268,6 +292,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       Top = 28
       Width = 476
       object bgIgnoreExceptions: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Ignore these exceptions'
         ClientHeight = 328
         ClientWidth = 468
@@ -279,6 +304,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Top = 8
         Width = 468
         object cmdExceptionRemove: TButton
+          BorderSpacing.OnChange = nil
           Caption = 'Remove'
           Enabled = False
           OnClick = cmdExceptionRemoveCLICK
@@ -289,6 +315,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 75
         end
         object cmdExceptionAdd: TButton
+          BorderSpacing.OnChange = nil
           Caption = 'Add'
           OnClick = cmdExceptionAddCLICK
           TabOrder = 1
@@ -298,6 +325,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 75
         end
         object clbExceptions: TCheckListBox
+          BorderSpacing.OnChange = nil
           OnClick = clbExceptionsCLICK
           TabOrder = 2
           TopIndex = -1
@@ -309,7 +337,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       end
       object chkBreakOnException: TCheckBox
         AllowGrayed = True
-        AutoSize = True
+        BorderSpacing.OnChange = nil
         Caption = 'Break on Lazarus Exceptions'
         TabOrder = 1
         Left = 2
@@ -327,6 +355,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
       Top = 28
       Width = 476
       object gbSignals: TGroupBox
+        BorderSpacing.OnChange = nil
         Caption = 'Signals'
         ClientHeight = 354
         ClientWidth = 468
@@ -338,6 +367,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
         Top = 8
         Width = 468
         object cmdSignalRemove: TButton
+          BorderSpacing.OnChange = nil
           Caption = 'Remove'
           Enabled = False
           TabOrder = 0
@@ -347,6 +377,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 75
         end
         object cmdSignalAdd: TButton
+          BorderSpacing.OnChange = nil
           Caption = 'Add'
           TabOrder = 1
           Left = 296
@@ -355,6 +386,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
           Width = 75
         end
         object lvSignals: TListView
+          BorderSpacing.OnChange = nil
           Columns = <          
             item
               Caption = 'Name'
@@ -382,6 +414,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     end
   end
   object cmdCancel: TButton
+    BorderSpacing.OnChange = nil
     Cancel = True
     Caption = 'Cancel'
     ModalResult = 2
@@ -392,6 +425,7 @@ object DebuggerOptionsForm: TDebuggerOptionsForm
     Width = 75
   end
   object cmdOK: TButton
+    BorderSpacing.OnChange = nil
     Caption = 'OK'
     Default = True
     OnClick = cmdOKCLICK
