--- a/components/fpcunit/guitestrunner.lfm
+++ b/components/fpcunit/guitestrunner.lfm
@@ -20,7 +20,6 @@ object GUITestRunner: TGUITestRunner
     2020202020227D3B0A
   }
   OnCreate = GUITestRunnerCreate
-  OnDestroy = GUITestRunnerDestroy
   OnShow = GUITestRunnerShow
   PixelsPerInch = 95
   HorzScrollBar.Page = 645
@@ -31,7 +30,6 @@ object GUITestRunner: TGUITestRunner
   Width = 646
   object Panel1: TPanel
     Align = alTop
-    BorderSpacing.OnChange = nil
     ClientHeight = 82
     ClientWidth = 646
     FullRepaint = False
@@ -40,7 +38,6 @@ object GUITestRunner: TGUITestRunner
     Height = 82
     Width = 646
     object Label1: TLabel
-      BorderSpacing.OnChange = nil
       Caption = 'Selected Test Suite:'
       ParentColor = True
       Left = 160
@@ -48,8 +45,17 @@ object GUITestRunner: TGUITestRunner
       Top = 16
       Width = 176
     end
+    object lblSelectedTest: TLabel
+      Caption = 'All Tests'
+      Color = clNone
+      Font.CharSet = ANSI_CHARSET
+      Font.Color = clBlue
+      Left = 161
+      Height = 23
+      Top = 40
+      Width = 343
+    end
     object btnRun: TBitBtn
-      BorderSpacing.OnChange = nil
       Caption = '&Run'
       Glyph.Data = {
         191C00002F2A2058504D202A2F0A7374617469632063686172202A2062746E5F
@@ -286,7 +292,6 @@ object GUITestRunner: TGUITestRunner
       Width = 103
     end
     object btnClose: TBitBtn
-      BorderSpacing.OnChange = nil
       Caption = '&Exit'
       Glyph.Data = {
         B42500002F2A2058504D202A2F0A7374617469632063686172202A2065786974
@@ -599,23 +604,9 @@ object GUITestRunner: TGUITestRunner
       Top = 15
       Width = 96
     end
-    object ComboBox1: TComboBox
-      BorderSpacing.OnChange = nil
-      Items.Strings = (
-        'All'
-      )
-      MaxLength = 0
-      Style = csDropDownList
-      Text = 'All'
-      Left = 160
-      Height = 21
-      Top = 32
-      Width = 276
-    end
   end
   object Panel2: TPanel
     Align = alClient
-    BorderSpacing.OnChange = nil
     Caption = 'Panel2'
     ClientHeight = 630
     ClientWidth = 646
@@ -628,7 +619,6 @@ object GUITestRunner: TGUITestRunner
     object PageControl1: TPageControl
       ActivePage = tsTestTree
       Align = alClient
-      BorderSpacing.OnChange = nil
       TabIndex = 0
       TabOrder = 0
       Left = 1
@@ -645,7 +635,6 @@ object GUITestRunner: TGUITestRunner
         object TestTree: TTreeView
           Align = alTop
           AutoExpand = True
-          BorderSpacing.OnChange = nil
           BackgroundColor = clBtnFace
           ChangeDelay = 1
           DefaultItemHeight = 16
@@ -661,7 +650,6 @@ object GUITestRunner: TGUITestRunner
         end
         object Panel4: TPanel
           Align = alTop
-          BorderSpacing.OnChange = nil
           ClientHeight = 63
           ClientWidth = 644
           FullRepaint = False
@@ -669,7 +657,6 @@ object GUITestRunner: TGUITestRunner
           Height = 63
           Width = 644
           object pbBar: TPaintBox
-            BorderSpacing.OnChange = nil
             ParentColor = True
             OnPaint = pbBarPaint
             Left = 22
@@ -692,7 +679,6 @@ object GUITestRunner: TGUITestRunner
         end
         object Memo1: TMemo
           Align = alClient
-          BorderSpacing.OnChange = nil
           PopupMenu = PopupMenu2
           TabOrder = 2
           Height = 53
@@ -709,7 +695,6 @@ object GUITestRunner: TGUITestRunner
         Width = 644
         object Panel3: TPanel
           Align = alClient
-          BorderSpacing.OnChange = nil
           Caption = 'Panel3'
           ClientHeight = 606
           ClientWidth = 644
@@ -720,7 +705,6 @@ object GUITestRunner: TGUITestRunner
           Width = 644
           object Panel5: TPanel
             Align = alTop
-            BorderSpacing.OnChange = nil
             BorderWidth = 1
             ClientHeight = 58
             ClientWidth = 642
@@ -732,7 +716,6 @@ object GUITestRunner: TGUITestRunner
             Width = 642
             object SpeedButton1: TSpeedButton
               Action = actCopy
-              BorderSpacing.OnChange = nil
               Flat = True
               Glyph.Data = {
                 880D00002F2A2058504D202A2F0A7374617469632063686172202A2065646974
@@ -856,7 +839,6 @@ object GUITestRunner: TGUITestRunner
             end
             object SpeedButton2: TSpeedButton
               Action = actCut
-              BorderSpacing.OnChange = nil
               Flat = True
               Glyph.Data = {
                 CC0500002F2A2058504D202A2F0A7374617469632063686172202A2065646974
@@ -917,7 +899,6 @@ object GUITestRunner: TGUITestRunner
               Width = 31
             end
             object pbBar1: TPaintBox
-              BorderSpacing.OnChange = nil
               ParentColor = True
               OnPaint = pbBarPaint
               Left = 110
@@ -928,7 +909,6 @@ object GUITestRunner: TGUITestRunner
           end
           object XMLMemo: TMemo
             Align = alClient
-            BorderSpacing.OnChange = nil
             PopupMenu = PopupMenu1
             TabOrder = 1
             Left = 1
