* Reworked listviews to match new interface
 SVN 6848@trunk

--- a/examples/listview/testform.lfm
+++ b/examples/listview/testform.lfm
@@ -1,20 +1,170 @@
 object Form1: TForm1
   Caption = 'Listview test'
   ClientHeight = 299
-  ClientWidth = 602
-  HorzScrollBar.Page = 603
-  VertScrollBar.Page = 300
+  ClientWidth = 627
+  PixelsPerInch = 108
+  HorzScrollBar.Page = 626
+  VertScrollBar.Page = 298
   Left = 356
   Height = 299
   Top = 150
-  Width = 602
+  Width = 627
   object Notebook1: TNotebook
     Anchors = [akTop, akRight]
+    BorderSpacing.OnChange = nil
     PageIndex = 0
-    Left = 408
+    Left = 433
     Height = 280
     Top = 8
     Width = 184
+    object Page3: TPage
+      Caption = 'LV'
+      ClientWidth = 180
+      ClientHeight = 250
+      Left = 2
+      Height = 250
+      Top = 28
+      Width = 180
+      object Label11: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'Scrollbars'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 60
+        Width = 65
+      end
+      object Label12: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'SortColumn'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 122
+        Width = 65
+      end
+      object Label13: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'SortType'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 154
+        Width = 65
+      end
+      object Label14: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'ViewStyle'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 186
+        Width = 65
+      end
+      object CheckBox3: TCheckBox
+        BorderSpacing.OnChange = nil
+        Caption = 'Multiselect'
+        OnChange = CheckBox3Change
+        OnClick = CheckBox3Click
+        TabOrder = 0
+        Left = 6
+        Height = 23
+        Top = 4
+        Width = 90
+      end
+      object ComboBox2: TComboBox
+        BorderSpacing.OnChange = nil
+        Items.Strings = (
+          'ssNone'
+          'ssHorizontal'
+          'ssVertical'
+          'ssBoth'
+          'ssAutoHorizontal'
+          'ssAutoVertical'
+          'ssAutoBoth'
+        )
+        ItemIndex = 6
+        MaxLength = 0
+        OnChange = ComboBox2Change
+        Style = csDropDownList
+        TabOrder = 1
+        Text = 'ssAutoBoth'
+        Left = 77
+        Height = 25
+        Top = 52
+        Width = 95
+      end
+      object Edit11: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit11Change
+        TabOrder = 2
+        Text = '0'
+        Left = 78
+        Height = 23
+        Top = 116
+        Width = 80
+      end
+      object ComboBox3: TComboBox
+        BorderSpacing.OnChange = nil
+        Items.Strings = (
+          'stNone'
+          'stData'
+          'stText'
+          'stBoth'
+        )
+        ItemIndex = 0
+        MaxLength = 0
+        OnChange = ComboBox3Change
+        Style = csDropDownList
+        TabOrder = 3
+        Text = 'stNone'
+        Left = 77
+        Height = 25
+        Top = 146
+        Width = 95
+      end
+      object ComboBox4: TComboBox
+        BorderSpacing.OnChange = nil
+        Items.Strings = (
+          'vsIcon'
+          'vsSmallIcon'
+          'vsList'
+          'vsReport'
+        )
+        ItemIndex = 3
+        MaxLength = 0
+        OnChange = ComboBox4Change
+        Style = csDropDownList
+        TabOrder = 4
+        Text = 'vsReport'
+        Left = 78
+        Height = 25
+        Top = 178
+        Width = 95
+      end
+      object CheckBox4: TCheckBox
+        BorderSpacing.OnChange = nil
+        Caption = 'RowSelect'
+        OnClick = CheckBox4Click
+        TabOrder = 5
+        Left = 6
+        Height = 23
+        Top = 28
+        Width = 90
+      end
+      object CheckBox5: TCheckBox
+        BorderSpacing.OnChange = nil
+        Caption = 'ShowColumnHeaders'
+        Checked = True
+        OnClick = CheckBox5Click
+        State = cbChecked
+        TabOrder = 6
+        Left = 6
+        Height = 23
+        Top = 84
+        Width = 139
+      end
+    end
     object Page1: TPage
       Caption = 'Items'
       ClientWidth = 180
@@ -23,109 +173,121 @@ object Form1: TForm1
       Height = 250
       Top = 28
       Width = 180
-      object Button1: TButton
-        Caption = 'Insert'
-        TabOrder = 0
-        OnClick = Button1Click
-        Left = 6
-        Height = 25
-        Top = 52
-        Width = 75
-      end
-      object Button2: TButton
-        Caption = 'Delete'
-        TabOrder = 1
-        OnClick = Button2Click
-        Left = 94
-        Height = 25
-        Top = 52
-        Width = 75
-      end
-      object Button5: TButton
-        Caption = 'Select'
-        TabOrder = 2
-        OnClick = Button5Click
-        Left = 6
-        Height = 25
-        Top = 84
-        Width = 75
-      end
-      object Button6: TButton
-        Caption = 'Focus'
-        TabOrder = 3
-        OnClick = Button6Click
-        Left = 94
-        Height = 25
-        Top = 84
-        Width = 75
-      end
-      object Edit1: TEdit
-        OnChange = Edit1Change
-        TabOrder = 4
-        Text = '0'
-        TabOrder = 4
-        Left = 6
-        Height = 23
-        Top = 20
-        Width = 80
-      end
-      object Edit4: TEdit
-        OnChange = Edit4Change
-        TabOrder = 5
-        Text = 'Edit4'
-        TabOrder = 5
-        Left = 6
-        Height = 23
-        Top = 132
-        Width = 80
-      end
-      object Edit5: TEdit
-        OnChange = Edit5Change
-        TabOrder = 6
-        Text = '0'
-        TabOrder = 6
-        Left = 94
-        Height = 23
-        Top = 20
-        Width = 80
-      end
       object Label6: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'Index'
+        ParentColor = True
         Left = 6
         Height = 17
         Top = 4
         Width = 65
       end
       object Label7: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'SubIndex'
+        ParentColor = True
         Left = 94
         Height = 17
         Top = 4
         Width = 65
       end
       object Label9: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'Text'
+        ParentColor = True
         Left = 6
         Height = 17
         Top = 116
         Width = 65
       end
-      object Edit10: TEdit
-        OnChange = Edit10Change
-        TabOrder = 10
-        Text = '-1'
-        TabOrder = 10
-        Left = 94
-        Height = 23
-        Top = 132
-        Width = 80
-      end
       object Label10: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'ImageIndex'
+        ParentColor = True
         Left = 94
         Height = 17
         Top = 116
         Width = 65
+      end
+      object Button1: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Insert'
+        OnClick = Button1Click
+        TabOrder = 0
+        Left = 6
+        Height = 25
+        Top = 52
+        Width = 75
+      end
+      object Button2: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Delete'
+        OnClick = Button2Click
+        TabOrder = 1
+        Left = 94
+        Height = 25
+        Top = 52
+        Width = 75
+      end
+      object Button5: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Select'
+        OnClick = Button5Click
+        TabOrder = 2
+        Left = 6
+        Height = 25
+        Top = 84
+        Width = 75
+      end
+      object Button6: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Focus'
+        OnClick = Button6Click
+        TabOrder = 3
+        Left = 94
+        Height = 25
+        Top = 84
+        Width = 75
+      end
+      object Edit1: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit1Change
+        TabOrder = 4
+        Text = '0'
+        Left = 6
+        Height = 23
+        Top = 20
+        Width = 80
+      end
+      object Edit4: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit4Change
+        TabOrder = 5
+        Text = 'Edit4'
+        Left = 6
+        Height = 23
+        Top = 132
+        Width = 80
+      end
+      object Edit5: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit5Change
+        TabOrder = 6
+        Text = '0'
+        Left = 94
+        Height = 23
+        Top = 20
+        Width = 80
+      end
+      object Edit10: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit10Change
+        TabOrder = 7
+        Text = '-1'
+        Left = 94
+        Height = 23
+        Top = 132
+        Width = 80
       end
     end
     object Page2: TPage
@@ -136,131 +298,151 @@ object Form1: TForm1
       Height = 250
       Top = 28
       Width = 180
-      object Button3: TButton
-        Caption = 'Insert'
-        TabOrder = 0
-        OnClick = Button3Click
-        Left = 6
-        Height = 25
-        Top = 52
-        Width = 75
-      end
-      object Button4: TButton
-        Caption = 'Delete'
-        TabOrder = 1
-        OnClick = Button4Click
-        Left = 94
-        Height = 25
-        Top = 52
-        Width = 75
-      end
-      object Edit2: TEdit
-        OnChange = Edit2Change
-        TabOrder = 2
-        Text = '0'
-        TabOrder = 2
-        Left = 6
-        Height = 23
-        Top = 20
-        Width = 80
-      end
-      object Edit3: TEdit
-        OnChange = Edit3Change
-        TabOrder = 3
-        Text = 'Edit3'
-        TabOrder = 3
-        Left = 6
-        Height = 23
-        Top = 100
-        Width = 80
-      end
       object Label1: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'Caption'
+        ParentColor = True
         Left = 6
         Height = 17
         Top = 84
         Width = 65
       end
       object Label2: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'Width'
+        ParentColor = True
         Left = 94
         Height = 17
         Top = 84
         Width = 65
       end
-      object Edit6: TEdit
-        OnChange = Edit6Change
-        TabOrder = 6
-        Text = '0'
-        TabOrder = 6
-        Left = 94
-        Height = 23
-        Top = 100
-        Width = 80
-      end
       object Label3: TLabel
+        BorderSpacing.OnChange = nil
         Caption = 'Minwidth'
+        ParentColor = True
         Left = 6
         Height = 17
         Top = 132
         Width = 65
       end
-      object Edit7: TEdit
-        OnChange = Edit7Change
-        TabOrder = 8
+      object Label4: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'Maxwidth'
+        ParentColor = True
+        Left = 94
+        Height = 17
+        Top = 132
+        Width = 65
+      end
+      object Label5: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'Image'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 179
+        Width = 65
+      end
+      object Label8: TLabel
+        BorderSpacing.OnChange = nil
+        Caption = 'Index'
+        ParentColor = True
+        Left = 6
+        Height = 17
+        Top = 4
+        Width = 65
+      end
+      object Button3: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Insert'
+        OnClick = Button3Click
+        TabOrder = 0
+        Left = 6
+        Height = 25
+        Top = 52
+        Width = 75
+      end
+      object Button4: TButton
+        BorderSpacing.OnChange = nil
+        Caption = 'Delete'
+        OnClick = Button4Click
+        TabOrder = 1
+        Left = 94
+        Height = 25
+        Top = 52
+        Width = 75
+      end
+      object Edit2: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit2Change
+        TabOrder = 2
         Text = '0'
-        TabOrder = 8
+        Left = 6
+        Height = 23
+        Top = 20
+        Width = 80
+      end
+      object Edit3: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit3Change
+        TabOrder = 3
+        Text = 'Edit3'
+        Left = 6
+        Height = 23
+        Top = 100
+        Width = 80
+      end
+      object Edit6: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit6Change
+        TabOrder = 4
+        Text = '0'
+        Left = 94
+        Height = 23
+        Top = 100
+        Width = 80
+      end
+      object Edit7: TEdit
+        BorderSpacing.OnChange = nil
+        OnChange = Edit7Change
+        TabOrder = 7
+        Text = '0'
         Left = 6
         Height = 23
         Top = 148
         Width = 80
       end
       object Edit8: TEdit
+        BorderSpacing.OnChange = nil
         OnChange = Edit8Change
         TabOrder = 9
         Text = '0'
-        TabOrder = 9
         Left = 94
         Height = 23
         Top = 148
         Width = 80
       end
-      object Label4: TLabel
-        Caption = 'Maxwidth'
-        Left = 94
-        Height = 17
-        Top = 132
-        Width = 65
-      end
       object CheckBox1: TCheckBox
-        AllowGrayed = True
-        AutoSize = True
+        BorderSpacing.OnChange = nil
         Caption = 'Visible'
-        DragCursor = 65524
         OnClick = CheckBox1Click
-        TabOrder = 11
+        TabOrder = 5
         Left = 6
         Height = 20
         Top = 220
         Width = 80
       end
       object Edit9: TEdit
-        TabOrder = 12
+        BorderSpacing.OnChange = nil
+        TabOrder = 6
         Text = '-1'
-        TabOrder = 12
         Left = 6
         Height = 23
         Top = 193
         Width = 80
       end
-      object Label5: TLabel
-        Caption = 'Image'
-        Left = 6
-        Height = 17
-        Top = 179
-        Width = 65
-      end
       object ComboBox1: TComboBox
+        BorderSpacing.OnChange = nil
         Items.Strings = (
           'taLeftJustify'
           'taRightJustify'
@@ -269,53 +451,41 @@ object Form1: TForm1
         MaxLength = 0
         OnChange = ComboBox1Change
         ParentCtl3D = False
-        TabOrder = 14
-        Text = 'taLeftJustify'
+        TabOrder = 8
         Left = 94
         Height = 25
         Top = 191
         Width = 80
       end
       object CheckBox2: TCheckBox
-        AllowGrayed = True
-        AutoSize = True
+        BorderSpacing.OnChange = nil
         Caption = 'Autosize'
-        DragCursor = 65524
         OnClick = CheckBox2Click
-        TabOrder = 15
+        TabOrder = 10
         Left = 94
         Height = 20
         Top = 220
         Width = 80
       end
-      object Label8: TLabel
-        Caption = 'Index'
-        Left = 6
-        Height = 17
-        Top = 4
-        Width = 65
-      end
     end
   end
   object ListView1: TListView
     Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
     BorderWidth = 2
     Columns = <    
       item
         Caption = 'One'
-        Visible = True
-        Width = 50
       end    
       item
         Caption = 'Two'
-        Visible = True
-        Width = 50
       end>
     Items.Data = {
-      520000000200000000000000FFFFFFFFFFFFFFFF0200000000000000054E6577
+      52FEFFFF0200000000000000FFFFFFFFFFFFFFFF0200000000000000054E6577
       2031055375622031055375622032FFFFFFFFFFFFFFFFFFFFFFFF000000000000
-      0000054E6577203200000000000000000000
+      0000054E65772032FFFFFFFFFFFFFFFF
     }
+    ScrollBars = ssAutoBoth
     SmallImages = ImageList1
     ViewStyle = vsReport
     OnChange = ListView1Change
@@ -325,7 +495,7 @@ object Form1: TForm1
     Left = 8
     Height = 280
     Top = 8
-    Width = 392
+    Width = 417
   end
   object ImageList1: TImageList
     OnChange = ImageList1Change
